# Telegram-Bot-MCP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
deploy/: deploy-cloudrun.sh  set-webhook.sh
scripts/: client.py
src/telegram_bot_mcp/: __init__.py  config.py  server.py  storage.py
src/telegram_bot_mcp/approval/: __init__.py  callback.py  store.py
src/telegram_bot_mcp/bot/: __init__.py  chat.py  commands.py  replies.py  runner.py
src/telegram_bot_mcp/cli/: __init__.py  args.py  preflight.py  run.py
src/telegram_bot_mcp/db/: __init__.py  pool.py  schema.sql
src/telegram_bot_mcp/gate/: __init__.py  __main__.py  app.py  auth.py  notify.py  routes.py  server.py  tools.py  webhook.py
src/telegram_bot_mcp/mcp/: __init__.py  __main__.py  app.py  prompts.py  resources.py  tools.py
src/telegram_bot_mcp/tokens/: __init__.py  db.py  endpoint.py  schema.sql  store.py
src/telegram_bot_mcp/webhook/: __init__.py  admin.py  app.py  deps.py  status.py  telegram.py
