[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "telegram-bot-mcp"
version = "0.2.0"
description = "Telegram Bot MCP server: send messages and manage a Telegram bot from MCP clients"
authors = [
    {name = "tr4m0ryp", email = "tramoryp@proton.me"}
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Everything beyond the Smithery send-only server: full MCP server,
# polling bot, and the FastAPI webhook server.
full = [
    "python-telegram-bot>=21.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]

[project.scripts]
telegram-bot-mcp = "telegram_bot_mcp.cli:main"
dev = "smithery.cli.dev:main"          # Run the MCP server in development mode
start = "smithery.cli.start:main"      # Run the MCP server in production mode
playground = "smithery.cli.playground:main"  # Interactive testing playground

[tool.smithery]
server = "telegram_bot_mcp.server:create_server"
log_level = "warning"
